# Project

./: .coverage  .coveragerc  .gitignore  README.md  User-Guide.md  app.py  pyproject.toml  tempCodeRunnerFile.python
Documentation/: Implementation-Document.md  Specification Document.md  Testing-Document.md
Documentation/Weekly Reports/: Weekly-Report-1.md
Documentation/Weekly-Reports/: Weekly-Report-2.md  Weekly-Report-3.md  Weekly-Report-4.md  Weekly-Report-5.md  Weekly-Report-6.md
data/: finnish_words.txt  finnishfemale.txt  finnishmale.txt  pokemon.txt
src/: __init__.py  namegen.py  tempCodeRunnerFile.py
src/namegen/: __init__.py  corpus.py  generator.py  trie.py
tests/: .coverage  conftest.py  test_corpus.py  test_e2e.py  test_example.py  test_generator.py  test_sampling.py  test_trie.py
