[tool.poetry]
name = "namegen"
version = "0.1.0"
description = "Name generator project for University of Helsinki Algorithms and AI Lab"
authors = ["mariirik"]
readme = "README.md"

packages = [
  { include = "namegen", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4"            

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
markers = [
  "slow: end-to-end batch quality & reproducibility test",
]